--- a/stlye.css
+++ b/stlye.css
@@ -56,6 +56,8 @@ body{
     justify-content: space-around;
 }
 .categories p{
+display: flex;
+flex-wrap: wrap;
 background-color: #A435F0;
 color: white;
 padding: 10px;
